--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,15 +39,15 @@ jobs:
 
       - name: Terraform Init
         id: init
-        run: terraform init
+        run: terraform init infra/
 
       - name: Terraform Validate
         id: validate
-        run: terraform validate -no-color
+        run: terraform validate infra/ -no-color
 
       - name: Terraform Plan
         id: plan
-        run: TF_LOG=DEBUG terraform plan -input=false -no-color -out latest
+        run: TF_LOG=DEBUG terraform plan infra/ -input=false -no-color -out latest
         continue-on-error: true
 
       - name: Terraform Apply
