--- a/.github/workflows/destroy.yml
+++ b/.github/workflows/destroy.yml
@@ -1,42 +1,31 @@
-name: Destroy Network Relationships
+name: Destroy AWS Resources
 
 on:
-    workflow_dispatch:
-
-env:
-    AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-    AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-    TF_VAR_rdsUser: ${{ secrets.AWS_RDS_USER }}
-    TF_VAR_rdsPass: ${{ secrets.AWS_RDS_PASS }}
-
-permissions:
-    pull-requests: write
+  workflow_dispatch:
 
 jobs:
-  terraform_destroy:
-    name: 'Terraform destroy infra'
+  deploy:
     runs-on: ubuntu-latest
 
-    environment: 'marlondev'
-    env:
-      TF_WORKING_DIR: '.'
-
-    defaults:
-      run:
-        shell: bash
-        working-directory: ${{ env.TF_WORKING_DIR }}
-
     steps:
-    - name: Checkout Repository
-      uses: actions/checkout@v2
+      - name: Checkout
+        uses: actions/checkout@v2
 
-    - name: Setup Terraform
-      uses: hashicorp/setup-terraform@v1
-      with:
-        terraform_version: 1.1.0  # Versão do Terraform
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v1
+        with:
+          terraform_version: 0.14.0
 
-    - name: Terraform Init
-      run: terraform init
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-east-1
 
-    - name: Terraform Destroy
-      run: terraform destroy -auto-approve
+      - name: Initialize Terraform
+        run: terraform init infra/
+
+      - name: Terraform Destroy
+        run: terraform destroy -auto-approve
+
